[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bootcamp-project"
version = "0.1.0"
description = "BU Neurophotonics NRT Hackathon Project Repo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 88

